<resources>
    <string name="app_name">News and Movies App Ivan V Yasir</string>
    <string name="business">Business</string>
    <string name="categories">News Categories</string>
    <string name="categories2">Movies Categories</string>
    <string name="all_categories">All Categories</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="news">News</string>
    <string name="daftar_film">Daftar Film</string>
</resources>